--- a/static/pages/arjs_scene.html
+++ b/static/pages/arjs_scene.html
@@ -9,7 +9,7 @@
 </head>
 
 <body style="margin : 0px; overflow: hidden;">
-    <a-scene embedded arjs="detectionMode: mono_and_matrix; matrixCodeType: 3x3;" renderer="logarithmicDepthBuffer: true;">
+    <a-scene embedded arjs="detectionMode: mono_and_matrix; matrixCodeType: 3x3;" renderer="logarithmicDepthBuffer: true;" vr-mode-ui ="enabled: false">
         <a-marker preset="custom" type = "pattern" url = "/assets/AR/marker.patt">
             <a-entity> gltf-model = "url('/assets/tshirt/tshirt.gltf')"</a-entity>
         </a-marker>
