--- a/static/pages/arjs_scene.html
+++ b/static/pages/arjs_scene.html
@@ -6,33 +6,15 @@
     <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
     <script src="https://raw.githack.com/AR-js-org/studio-backend/master/src/modules/marker/tools/gesture-detector.js"></script>
     <script src="https://raw.githack.com/AR-js-org/studio-backend/master/src/modules/marker/tools/gesture-handler.js"></script>
-    <script>
-        sceneEl.addEventListener("markerFound", (e) => {isMarkerVisible = true;});
-        sceneEl.addEventListener("markerLost", (e) => {isMarkerVisible = false;});
-
-        sceneEl.addEventListener("onefingermove", handleRotation);
-        //sceneEl.addEventListener("twofingermove", handleScale);
-
-        handleRotation(event)
-        {
-            if (isMarkerVisible)
-            {
-                el.object3D.rotation.y += event.detail.positionChange.x * rotationFactor;
-                el.object3D.rotation.x += event.detail.positionChange.y * rotationFactor;
-            }
-        }
-    </script>
 </head>
 
 <body style="margin : 0px; overflow: hidden;">
-    <a-scene embedded arjs="detectionMode: mono_and_matrix; matrixCodeType: 3x3;" renderer="logarithmicDepthBuffer: true;" vr-mode-ui ="enabled: false" gesture-detector id="scene">
+    <a-scene embedded arjs="detectionMode: mono_and_matrix; matrixCodeType: 3x3;" renderer="logarithmicDepthBuffer: true;" vr-mode-ui ="enabled: false">
         <!--<a-marker-camera preset="hiro"></a-marker-camera>-->
-        <a-nft>type="nft"
-        </a-nft>
-        <a-entity camera></a-entity>
         <a-marker preset="hiro">
             <a-entity gltf-model = "url(/static/assets/tshirt/tshirt.gltf)" scale = "0.05 0.05 0.05" rotation = "270 0 0" position = "0 0 2.6"></a-entity>
         </a-marker>
+        <a-entity camera></a-entity>
     </a-scene>
 </body>
 
