--- a/static/pages/arjs_scene.html
+++ b/static/pages/arjs_scene.html
@@ -6,13 +6,24 @@
     <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
     <script src="https://raw.githack.com/AR-js-org/studio-backend/master/src/modules/marker/tools/gesture-detector.js"></script>
     <script src="https://raw.githack.com/AR-js-org/studio-backend/master/src/modules/marker/tools/gesture-handler.js"></script>
+
+    <script>
+        fetch('/update_shirt_texture', {
+      method: 'POST',
+      headers: {
+          'Content-Type': 'application/json'
+      },
+      // body: JSON.stringify({"prompt": prompt})
+    })
+
+    </script>
 </head>
 
 <body style="margin : 0px; overflow: hidden;">
     <a-scene embedded arjs="detectionMode: mono_and_matrix; matrixCodeType: 3x3;" renderer="logarithmicDepthBuffer: true;" vr-mode-ui ="enabled: false">
         <!--<a-marker-camera preset="hiro"></a-marker-camera>-->
         <a-marker preset="hiro">
-            <a-entity gltf-model = "url(/static/assets/tshirt/tshirt.gltf)" scale = "0.05 0.05 0.05" rotation = "270 0 0" position = "0 0 2.6"></a-entity>
+            <a-entity gltf-model = "url(/static/assets/tshirt/tshirt_UPDATED.gltf)" scale = "0.05 0.05 0.05" rotation = "270 0 0" position = "0 0 2.6"></a-entity>
         </a-marker>
         <a-entity camera></a-entity>
     </a-scene>
