--- a/static/pages/arjs_scene.html
+++ b/static/pages/arjs_scene.html
@@ -23,12 +23,12 @@
     <a-scene embedded arjs="detectionMode: mono_and_matrix; matrixCodeType: 3x3;" renderer="logarithmicDepthBuffer: true;" vr-mode-ui ="enabled: false">
         <!--<a-marker-camera preset="hiro"></a-marker-camera>-->
         <a-marker preset="hiro">
-            <a-entity obj-model = "obj: url(/static/assets/tshirt/tshirt.obj); mtl: url(/static/assets/tshirt/tshirt.mtl)" scale = "0.05 0.05 0.05" rotation = "270 0 0" position = "0 0 2.6"></a-entity>
+            <a-entity id="TSHIRT_model" obj-model = "obj: url(/static/assets/tshirt/tshirt.obj); mtl: url(/static/assets/tshirt/tshirt.mtl)" scale = "0.05 0.05 0.05" rotation = "270 0 0" position = "0 0 2.6"></a-entity>
         </a-marker>
         <a-entity camera></a-entity>
     </a-scene>
 </body>
-
+<!--gltf-model = "url(/static/assets/tshirt/tshirt.gltf)" material = "src: url(/static/assets/tshirt/shirt.png)"-->
 </html>
 
 <!-- https://github.com/gftruj/webzamples/blob/master/arjs/resized/iframes/arjs_scene.html -->
