--- a/static/pages/arjs_scene.html
+++ b/static/pages/arjs_scene.html
@@ -7,7 +7,7 @@
     <script src="https://raw.githack.com/AR-js-org/studio-backend/master/src/modules/marker/tools/gesture-detector.js"></script>
     <script src="https://raw.githack.com/AR-js-org/studio-backend/master/src/modules/marker/tools/gesture-handler.js"></script>
 
-    <script>
+    <!-- <script>
         fetch('/update_shirt_texture', {
       method: 'POST',
       headers: {
@@ -15,12 +15,11 @@
       },
       // body: JSON.stringify({"prompt": prompt})
     })
-
-    </script>
+    </script> -->
 </head>
 
 <body style="margin : 0px; overflow: hidden;">
-    <a-scene embedded arjs="detectionMode: mono_and_matrix; matrixCodeType: 3x3;" renderer="logarithmicDepthBuffer: true;" vr-mode-ui ="enabled: false">
+    <a-scene id = "AR_scene" embedded arjs="detectionMode: mono_and_matrix; matrixCodeType: 3x3;" renderer="logarithmicDepthBuffer: true;" vr-mode-ui ="enabled: false">
         <!--<a-marker-camera preset="hiro"></a-marker-camera>-->
         <a-marker preset="hiro">
             <a-entity id="TSHIRT_model" obj-model = "obj: url(/static/assets/tshirt/tshirt.obj); mtl: url(/static/assets/tshirt/tshirt.mtl)" scale = "0.05 0.05 0.05" rotation = "270 0 0" position = "0 0 2.6"></a-entity>
