--- a/static/pages/arjs_scene.html
+++ b/static/pages/arjs_scene.html
@@ -21,8 +21,12 @@
 <body style="margin : 0px; overflow: hidden;">
     <a-scene id = "AR_scene" embedded arjs="detectionMode: mono_and_matrix; matrixCodeType: 3x3;" renderer="logarithmicDepthBuffer: true;" vr-mode-ui ="enabled: false">
         <!--<a-marker-camera preset="hiro"></a-marker-camera>-->
+        <a-assets>
+            <a-asset-item id="shirt-obj" src="/static/assets/tshirt/tshirt.obj"></a-asset-item>
+            <a-asset-item id="shirt-mtl" src="/static/assets/tshirt/tshirt.mtl"></a-asset-item>
+        </a-assets>
         <a-marker preset="hiro">
-            <a-entity id="TSHIRT_model" obj-model = "obj: url(/static/assets/tshirt/tshirt.obj); mtl: url(/static/assets/tshirt/tshirt.mtl)" scale = "0.05 0.05 0.05" rotation = "270 0 0" position = "0 0 2.6"></a-entity>
+            <a-entity id="shirt" obj-model = "obj: #shirt-obj; mtl: #shirt-mtl" scale = "0.05 0.05 0.05" rotation = "270 0 0" position = "0 0 2.6"></a-entity>
         </a-marker>
         <a-entity camera></a-entity>
     </a-scene>
